[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Graphics/Factory/Ground.png" type="Texture" id=1]
[ext_resource path="res://Tile.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/Factory/TileHighlight.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Tile" type="Area2D"]
script = ExtResource( 2 )

[node name="Ground" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 1 )

[node name="Highlight" type="Sprite" parent="."]
visible = false
position = Vector2( 32, 32 )
scale = Vector2( 6.4, 6.4 )
texture = ExtResource( 3 )

[node name="BuildingIcon" type="Sprite" parent="."]
position = Vector2( 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Tile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tile_mouse_exited"]
